--- a/css/styles.css
+++ b/css/styles.css
@@ -40,6 +40,8 @@ font-weight: 900;
   --client-border-color: #afb1b8;
   --header-border-color: #ececec;
 
+--modal-background-color: rgba(0, 0, 0, 0.2);
+
   --time-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 /* Common styles */
@@ -799,4 +801,29 @@ overflow: hidden;
 
   transition: transform 250ms var(--time-function);
   transform: translateY(calc(100% + 1px));
+}
+
+/* Модальное окно и форма */
+.backdrop{
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  background-color: var(--modal-background-color);
+}
+
+.modal{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 200px;
+  height: 200px;
+  background-color: #fff;
+}
+
+.is-hidden {
+opacity: 0;
+pointer-events: none;
 }
