--- a/css/styles.css
+++ b/css/styles.css
@@ -9,16 +9,7 @@
     /* Chrome 26+, Opera 23+, Firefox 39+ */
       url("../fonts/raleway-v16-latin-700.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
-/* @keyframes fadeInBottomRight {
-  from {
-    opacity: 0;
-    transform: translate3d(50%, 100%, 0);
-  }
-  to {
-    opacity: 1;
-    transform: translate3d(0, 0, 0);
-  }
-} */
+
 /* 
 Шрифты
 font-family: Raleway;
@@ -133,11 +124,6 @@ svg {
   color: var(--secondary-color);
   fill: var(--secondary-color);
 }
-
-.is-hidden {
-  opacity: 0;
-  pointer-events: none;
-  }
 
 .visually-hidden {
   position: absolute;
@@ -325,6 +311,7 @@ address {
   font-size: 16px;
   line-height: 1.87;
   letter-spacing: 0.06em;
+
 }
 
 /* Features */
@@ -885,6 +872,9 @@ footer > .container {
   width: 100%;
   height: 100%;
   background-color: var(--modal-background-color);
+
+  transition: transform 1000ms var(--time-function);
+  transform: scale(1);
 }
 
 .modal-window {
@@ -901,6 +891,7 @@ footer > .container {
   0px 1px 1px rgba(0, 0, 0, 0.14),
   0px 1px 3px rgba(0, 0, 0, 0.12);
   border-radius: 4px;
+  
 }
 
 .close-modal {  
@@ -939,6 +930,10 @@ footer > .container {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.form-order {
+  margin-bottom: 40px;
 }
 
 .form-text {
@@ -1095,14 +1090,8 @@ fill: var(--secondary-color);
 }
 
 .order-send {
-  display: block;
   width: 200px;
   height: 50px;
-
-  margin-bottom: 40px;
-  margin-left: auto;
-  margin-right: auto;
-
   color: var(--primary-white-color);
   background-color: var(--secondary-color);
 
@@ -1126,4 +1115,9 @@ fill: var(--secondary-color);
   color: var(--secondary-color);
 }
 
-
+.is-hidden {
+  opacity: 1;
+  pointer-events: none;
+  transform: scale(0);
+  transition: transform 1000ms var(--time-function);
+  }
