--- a/css/styles.css
+++ b/css/styles.css
@@ -457,7 +457,9 @@ section.team {
 .team-card {
   width: 270px;
   font-size: 0px;
-  box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14),
+  box-shadow: 
+    0px 2px 1px rgba(0, 0, 0, 0.2), 
+    0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 1px 3px rgba(0, 0, 0, 0.12);
   border-radius: 0px 0px 4px 4px;
 }
@@ -501,7 +503,8 @@ section.team {
 .bio-link {
   fill: var(--client-border-color);
   border-radius: 50%;
-  transition: background-color 250ms var(--time-function),
+  transition: 
+    background-color 250ms var(--time-function),
     fill 250ms var(--time-function);
 }
 
@@ -543,7 +546,8 @@ section.team {
   justify-content: center;
   align-items: center;
 
-  transition: border-color 250ms var(--time-function),
+  transition: 
+    border-color 250ms var(--time-function),
     fill 250ms var(--time-function);
 }
 
@@ -696,10 +700,7 @@ footer > .container {
 }
 
 .subscribe-button {
-  /* display: block; */
   padding: 10px 29px;
-  /* width: 200px;
-  height: 50px; */
 
   color: var(--primary-white-color);
   background-color: var(--secondary-color);
